--- a/ddblog/css/common.css
+++ b/ddblog/css/common.css
@@ -30,22 +30,19 @@ nav ul {
 	list-style: none;
 }
 
-nav li {
-	float: left;
-	padding: 10px;
-	transition: color .3s;
-}
-
-nav li:hover{
+nav li a:hover{
 	color: black;
-	border-bottom: 2px solid green;
+	border-bottom: 2px solid #AF6A25;
 }
 
 nav li a {
+	float: left;
+	padding: 10px;
 	color: inherit;
 	text-decoration: none;
+	transition: color .3s;
 }
-
+/*
 @media (max-width: 860px){
 	nav{
 		height: 350px;
@@ -60,3 +57,4 @@ nav li a {
 	}
 
 }
+*/
