--- a/ddblog/css/homepage.css
+++ b/ddblog/css/homepage.css
@@ -56,6 +56,11 @@ main {
 	padding-top: 8px;
 	padding-bottom: 8px;
 	border: 1px solid #AF6A25;
-	width: 200px;
+	width: 160px;
 	font-weight: 600;
+	font-size: 1em;
+}
+
+.blogpost .readmore:hover {
+	background-color: #AF6A25;
 }
