--- a/ddblog/css/homepage.css
+++ b/ddblog/css/homepage.css
@@ -52,15 +52,25 @@ main {
 .blogpost .readmore {
 	text-align: center;
 	margin-top: 20px;
-	font-style: normal;
 	padding-top: 8px;
 	padding-bottom: 8px;
 	border: 1px solid #AF6A25;
 	width: 160px;
 	font-weight: 600;
 	font-size: 1em;
+	transition: .5s;
+	font-style: normal;
+	color: #AF6A25;
+}
+
+.blogpost .readmore a{
+	text-decoration: none;
+	color: inherit;
 }
 
 .blogpost .readmore:hover {
 	background-color: #AF6A25;
+	color: #FFFFFF;
+	border-radius: 3px;
 }
+
