--- a/ddblog/css/homepage.css
+++ b/ddblog/css/homepage.css
@@ -52,20 +52,19 @@ main {
 
 .blogpost .readmore {
 	font-family: 'Open Sans', sans-serif;
-	margin-top: 500px;
+	margin-top: 20px;
 	text-align: center;
 	padding-top: 8px;
 	padding-bottom: 8px;
-	padding-left: 12px;
-	padding-right: 12px;
 	border: 1px solid #AF6A25;
-	width: 160px;
+	width: 150px;
 	font-weight: 600;
 	font-size: 1em;
 	transition: .5s;
 	font-style: normal;
 	color: #AF6A25;
 	text-decoration: none;
+	display: block;
 	}
 
 
