--- a/ddblog/css/homepage.css
+++ b/ddblog/css/homepage.css
@@ -1,15 +1,17 @@
 header{
-	height: 150px;
+	height: 180px;
 	background-color: #DDF4D8;
 	text-align: center;
 	color: #AF6A25;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 }
 
 header h1 {
-	padding-top: 40px;
-	font-size: 2em;
-
+	padding-top: 30px;
+	font-size: 2.7em;
+}
+header h2 {
+	font-size: 1.7em;
 }
 
 main {
