--- a/ddblog/css/homepage.css
+++ b/ddblog/css/homepage.css
@@ -1,6 +1,6 @@
 header{
 	height: 180px;
-	background-color: #DDF4D8;
+	background-color: #FFD7C6;
 	text-align: center;
 	color: #AF6A25;
 	font-family: 'Montserrat', sans-serif;
