More jekyll bugfixes.

--- a/ddblog/_layouts/encounter.html
+++ b/ddblog/_layouts/encounter.html
@@ -3,8 +3,8 @@ layout: post
 ---
 
 <head>
-	<link rel="stylesheet" href="/css/encountermain.css">
-	<link rel="stylesheet" href="/css/encounterpage.css">
+	<link rel="stylesheet" href="{{ site.baseurl }}/css/encountermain.css">
+	<link rel="stylesheet" href="{{ site.baseurl }}/css/encounterpage.css">
 </head>
 
 <div id="textarea">
