--- a/ddblog/_layouts/default.html
+++ b/ddblog/_layouts/default.html
@@ -3,21 +3,21 @@
 
 <html>
 	<head>
-		<link rel="stylesheet" href="/css/common.css">
+		<link rel="stylesheet" href="{{ site.baseurl }}/css/common.css">
 		<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:300italic,400italic,600italic,400,300,600,700' rel='stylesheet' type='text/css'>
 		<title>D&amp;D Blog</title>
 	</head>
 
 	<body>
 	<nav>
-		<h1><a href="/">{{ site.title }}</a></h1>
+		<h1><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
 		<ul>
-			<li><a href="/categories/encounters">Encounters</a></li>
-			<li><a href="/categories/characters">Characters</a></li>
-			<li><a href="/categories/guides">Guides</a></li>
-			<li><a href="/categories/monsters">Monsters</a></li>
-			<li><a href="/categories/stories">Stories</a></li>
-			<li><a href="/categories/contact">Contact Us</a></li>
+			<li><a href="{{ site.baseurl }}/categories/encounters">Encounters</a></li>
+			<li><a href="{{ site.baseurl }}/categories/characters">Characters</a></li>
+			<li><a href="{{ site.baseurl }}/categories/guides">Guides</a></li>
+			<li><a href="{{ site.baseurl }}/categories/monsters">Monsters</a></li>
+			<li><a href="{{ site.baseurl }}/categories/stories">Stories</a></li>
+			<li><a href="{{ site.baseurl }}/categories/contact">Contact Us</a></li>
 		</ul>
 	</nav>
 
