First update from DDBlog to Wellness blog

--- a/ddblog/css/common.css
+++ b/ddblog/css/common.css
@@ -32,7 +32,7 @@ nav ul {
 
 nav li a:hover{
 	color: black;
-	border-bottom: 2px solid #AF6A25;
+	border-bottom: 2px solid #33CC33;
 }
 
 nav li a {
