--- a/ddblog/css/blogentry.css
+++ b/ddblog/css/blogentry.css
@@ -1,8 +1,8 @@
 header{
 	height: 180px;
-	background-color: #FFD7C6;
+	background-color: #B6FFB6;
 	text-align: center;
-	color: #AF6A25;
+	color: #33CC33;
 	font-family: 'Montserrat', sans-serif;
 }
 
