--- a/new/css/common.css
+++ b/new/css/common.css
@@ -199,7 +199,7 @@ h1, h2, h3 {
 }
 
 #grow p {
-	width: 70%;
+	width: 80%;
 	margin-left: auto;
 	margin-right: auto; 
 }
@@ -243,7 +243,7 @@ h1, h2, h3 {
       overflow: hidden;
       margin-left: auto;
       margin-right: auto;
-      height: 250px;
+      height: 400px;
       margin-bottom: 150px;
     }
 
@@ -262,12 +262,13 @@ h1, h2, h3 {
     }
 
     .carouselbox button {
-      border: 1px solid #000000;
-      padding: 2px 2px 2px 2px;
+      border: 1px solid #2F343B;
+      padding: 3px 3px 3px 3px;
       visibility: hidden;
       font-family: 'Open Sans', sans-serif;
       font-weight: 900;
       cursor: pointer;
+      width: 100px;
     }
     .active button {
       visibility: visible;
